--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -354,7 +354,7 @@ spec:
                         type: object
                       metaData:
                         description: MetaData is an object storing the reference to
-                          the secret containing the Metadata.
+                          the secret containing the Metadata given by the user.
                         properties:
                           name:
                             description: Name is unique within a namespace to reference
@@ -367,7 +367,7 @@ spec:
                         type: object
                       networkData:
                         description: NetworkData is an object storing the reference
-                          to the secret containing the network data.
+                          to the secret containing the network data given by the user.
                         properties:
                           name:
                             description: Name is unique within a namespace to reference
