Fix wrong references in fetching objects
and set BMh examples to ready

--- a/examples/metal3plane/hosts.yaml
+++ b/examples/metal3plane/hosts.yaml
@@ -80,7 +80,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -154,7 +154,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -228,7 +228,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -302,7 +302,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -376,7 +376,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -450,7 +450,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -524,7 +524,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -598,7 +598,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -672,7 +672,7 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
 ---
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
@@ -746,4 +746,4 @@ status:
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
-    state: provisioned
+    state: ready
