--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
@@ -87,10 +87,16 @@ spec:
                           description: Offset is the offset to apply to the index
                             when rendering it
                           type: integer
+                        prefix:
+                          description: Prefix is the prefix string
+                          type: string
                         step:
                           default: 1
                           description: Step is the multiplier of the index
                           type: integer
+                        suffix:
+                          description: Suffix is the suffix string
+                          type: string
                       required:
                       - key
                       type: object
@@ -126,6 +132,21 @@ spec:
                             it is derived from the subnet ip incremented by 1 (`192.168.0.1`
                             for `192.168.0.0/24`)
                           pattern: ((^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))/([0-9]|[1-2][0-9]|3[0-2])$)|(^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))/([0-9]|[0-9][0-9]|1[0-1][0-9]|12[0-8])$))
+                          type: string
+                      required:
+                      - key
+                      type: object
+                    type: array
+                  namespaces:
+                    description: Namespaces is the list of metadata items to be rendered
+                      from the namespace
+                    items:
+                      description: MetaDataNamespace contains the information to render
+                        the namespace
+                      properties:
+                        key:
+                          description: Key is the metadata key when redendering this
+                            metadata element
                           type: string
                       required:
                       - key
