--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -14,6 +14,8 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3datas.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3ippools.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3ipaddresses.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -24,6 +26,8 @@ patchesStrategicMerge:
 - patches/webhook_in_metal3machinetemplates.yaml
 - patches/webhook_in_metal3datatemplates.yaml
 - patches/webhook_in_metal3datas.yaml
+- patches/webhook_in_metal3ippools.yaml
+- patches/webhook_in_metal3ipaddresses.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -33,6 +37,8 @@ patchesStrategicMerge:
 - patches/cainjection_in_metal3machinetemplates.yaml
 - patches/cainjection_in_metal3datatemplates.yaml
 - patches/cainjection_in_metal3datas.yaml
+- patches/cainjection_in_metal3ippools.yaml
+- patches/cainjection_in_metal3ipaddresses.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
