--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -39,3 +39,15 @@ patchesJson6902:
     kind: CustomResourceDefinition
     name: metal3datas.infrastructure.cluster.x-k8s.io
   path: patch_crd_webhook_namespace.yaml
+- target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
+    name: metal3ippools.infrastructure.cluster.x-k8s.io
+  path: patch_crd_webhook_namespace.yaml
+- target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
+    name: metal3ipaddresses.infrastructure.cluster.x-k8s.io
+  path: patch_crd_webhook_namespace.yaml
