--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -14,8 +14,10 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3datas.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3dataclaims.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3ippools.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3ipaddresses.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3ipclaims.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -26,8 +28,10 @@ patchesStrategicMerge:
 - patches/webhook_in_metal3machinetemplates.yaml
 - patches/webhook_in_metal3datatemplates.yaml
 - patches/webhook_in_metal3datas.yaml
+- patches/webhook_in_metal3dataclaims.yaml
 - patches/webhook_in_metal3ippools.yaml
 - patches/webhook_in_metal3ipaddresses.yaml
+- patches/webhook_in_metal3ipclaims.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -37,8 +41,10 @@ patchesStrategicMerge:
 - patches/cainjection_in_metal3machinetemplates.yaml
 - patches/cainjection_in_metal3datatemplates.yaml
 - patches/cainjection_in_metal3datas.yaml
+- patches/cainjection_in_metal3dataclaims.yaml
 - patches/cainjection_in_metal3ippools.yaml
 - patches/cainjection_in_metal3ipaddresses.yaml
+- patches/cainjection_in_metal3ipclaims.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
