--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -43,6 +43,12 @@ patchesJson6902:
     group: apiextensions.k8s.io
     version: v1
     kind: CustomResourceDefinition
+    name: metal3dataclaims.infrastructure.cluster.x-k8s.io
+  path: patch_crd_webhook_namespace.yaml
+- target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
     name: metal3ippools.infrastructure.cluster.x-k8s.io
   path: patch_crd_webhook_namespace.yaml
 - target:
@@ -50,4 +56,10 @@ patchesJson6902:
     version: v1
     kind: CustomResourceDefinition
     name: metal3ipaddresses.infrastructure.cluster.x-k8s.io
+  path: patch_crd_webhook_namespace.yaml
+- target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
+    name: metal3ipclaims.infrastructure.cluster.x-k8s.io
   path: patch_crd_webhook_namespace.yaml
