--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3ippools.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3ippools.yaml
@@ -93,7 +93,7 @@ spec:
                       type: string
                   type: object
                 type: array
-              preAllocations:omitempty:
+              preAllocations:
                 additionalProperties:
                   description: IPAddress is used for validation of an IP address
                   pattern: ((^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))$)|(^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))$))
@@ -107,7 +107,6 @@ spec:
             required:
             - clusterName
             - namePrefix
-            - preAllocations:omitempty
             type: object
           status:
             description: Metal3IPPoolStatus defines the observed state of Metal3IPPool.
