--- a/examples/controlplane/controlplane.yaml
+++ b/examples/controlplane/controlplane.yaml
@@ -47,6 +47,7 @@ kind: Metal3DataTemplate
 metadata:
   name: ${CLUSTER_NAME}-cp-metadata
 spec:
+  clusterName: ${CLUSTER_NAME}
   metaData:
     strings:
       - key: abc
@@ -67,21 +68,33 @@ spec:
         object: metal3machine
       - key: bmh_name
         object: baremetalhost
-    ipAddresses:
+    ipAddressesFromPool:
       - key: ip_1
-        start: 192.168.0.10
-        end: 192.168.0.100
-        step: 2
+        name: pool1
       - key: ip_2
-        subnet: 192.168.1.0/24
-        step: 1
+        name: pool2
       - key: ip6_1
-        start: 2001::af:a
-        end: 2001::af:fff0
-        step: 2
+        name: pool6-1
       - key: ip6_2
-        subnet: 2001:AB::0/64
-        step: 1
+        name: pool6-2
+    prefixesFromPool:
+      - key: prefix_1
+        name: pool1
+      - key: prefix_2
+        name: pool2
+      - key: prefix6_1
+        name: pool6-1
+      - key: prefix6_2
+        name: pool6-2
+    gatewaysFromPool:
+      - key: gateway_1
+        name: pool1
+      - key: gateway_2
+        name: pool2
+      - key: gateway6_1
+        name: pool6-1
+      - key: gateway6_2
+        name: pool6-2
     fromHostInterfaces:
       - key: mac
         interface: eth0
@@ -103,19 +116,65 @@ spec:
       ipv4:
         - id: baremetal
           link: enp2s0
-          ipAddress:
-            start: 192.168.111.10
-            end: 192.168.111.99
-            subnet: 192.168.111.0/24
-            step: 2
-          prefix: 24
+          ipAddressFromIPPool: pool1
           routes:
             - network: 0.0.0.0
               prefix: 0
-              gateway: 192.168.111.1
+              gateway:
+                fromIPPool: pool1
               services:
                 dns:
                   - 8.8.4.4
     services:
       dns:
         - 8.8.8.8
+---
+apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+kind: Metal3IPPool
+metadata:
+  name: pool1
+spec:
+  clusterName: ${CLUSTER_NAME}
+  pools:
+    - start: 192.168.0.10
+      end: 192.168.0.250
+      prefix: 24
+      gateway: 192.168.0.1
+  namePrefix: pool1
+---
+apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+kind: Metal3IPPool
+metadata:
+  name: pool2
+spec:
+  clusterName: ${CLUSTER_NAME}
+  pools:
+    - subnet: 192.168.1.0/24
+  prefix: 25
+  gateway: 192.168.1.1
+  namePrefix: pool2
+---
+apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+kind: Metal3IPPool
+metadata:
+  name: pool6-1
+spec:
+  clusterName: ${CLUSTER_NAME}
+  pools:
+    - start: 2001::10
+      end: 2001::ff00
+      prefix: 96
+      gateway: 2001::1
+  namePrefix: pool6-1
+---
+apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+kind: Metal3IPPool
+metadata:
+  name: pool6-2
+spec:
+  clusterName: ${CLUSTER_NAME}
+  pools:
+    - subnet: 2001:ABC::0/96
+  prefix: 96
+  gateway: 2001:ABC::1
+  namePrefix: pool6-2
